# yai-yx

./: .gitignore  Cargo.toml  FOUNDATION.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md
crates/yx-client/: Cargo.toml
crates/yx-client/src/: lib.rs
crates/yx-protocol/: Cargo.toml
crates/yx-protocol/src/: lib.rs
docs/: COMMANDS_V1.md  PROTOCOL_V1.md  SHELL_MODEL.md  UI_LAW_MAPPING.md  YX_SPEC.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: app.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: README.md  main.tsx
ui/src/app/: App.tsx  AppShell.js  AppShell.tsx  styles.css
ui/src/app/api/: bridge.js  bridge.ts
ui/src/app/components/: Badge.js  Badge.tsx  Card.js  Card.tsx  CommandCenter.tsx  CommandPalette.js  DataTable.js  FeedList.js  FeedList.tsx  InspectorDrawer.js  InspectorDrawer.tsx  LeftRail.tsx  Nav.tsx  Topbar.tsx
ui/src/app/core/: commands.ts  connection.ts  registry.ts
ui/src/app/state/: chat.js  commands.js  connection.js  events.js  providers.js  shell.js  store.js  store.tsx  types.ts
ui/src/app/views/: Chat.js  ChatView.tsx  Events.js  EventsView.tsx  Graph.js  GraphView.tsx  Law.js  LawView.tsx  Logs.js  LogsView.tsx  Mind.js  MindView.tsx  Overview.js  OverviewView.tsx  Providers.js  ProvidersView.tsx  Shell.js  ShellView.tsx
