[package]
name = "yx-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["time"] }
tauri = { version = "2", features = [] }
yx-client = { path = "../crates/yx-client" }
yx-protocol = { path = "../crates/yx-protocol" }
